Ingress/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: ingress-demo
spec: {}
status: {}
