Ingress/manifests/bucket-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bfcbucket
  name: bfcbucket-svc
  namespace: ingress-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bfcbucket
status:
  loadBalancer: {}
