Ingress/manifests/cart-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bfccart
  name: bfccart-svc
  namespace: ingress-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bfccart
status:
  loadBalancer: {}
