Ingress/manifests/main-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: bfcmain
  name: bfcmain-svc
  namespace: ingress-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: bfcmain
status:
  loadBalancer: {}
